feat: reorganized about and data

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a id="nav-Hero"><img src="./images/sprites/isologo-blanco.png" /></a>
         </li>
         <ul>
-          <li id="nav-About"><a>Sobre nosotros</a></li>
+          <li id="nav-About"><a>Introducción</a></li>
           <li id="nav-Speakers"><a>Ponentes</a></li>
           <li id="nav-Schedule"><a>Horario</a></li>
           <li id="nav-Sponsors"><a>Patrocinadores</a></li>
@@ -54,33 +54,18 @@
     </div>
   </section>
 
-  <!-- Data -->
-  <section id="Data" class="thin-Section centered">
 
-    <div class="col centered">
-      <h1 class="data">350+</h1>
-      <h2 class="label">Asistentes</h2>
-    </div>
-    <div class="col centered">
-      <h1 class="data">11</h1>
-      <h2 class="label">Charlas</h2>
-    </div>
-    <div class="col centered">
-      <h1 class="data">4</h1>
-      <h2 class="label">Mini-Tracks</h2>
-    </div>
-  </section>
 
   <!-- About -->
-  <section id="About" class="Section centered">
-    <h1>¿Que es el SalmorejoTech?</h1>
+  <section id="About" class="About Section centered">
+    <h1 class="setoff-text ">¿Que es el SalmorejoTech?</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum, lacus id mattis aliquam, ligula magna
       sollicitudin dui, non vulputate elit mi ut ex. Pellentesque a eros non eros egestas feugiat. Maecenas laoreet cursus
       laoreet. Praesent eu magna blandit, posuere ipsum a, tempus felis. Fusce iaculis velit in dui viverra.
     </p>
     <div class="about-List colM centered glass-card">
-      <h4>¿Que ofrecemos?</h4>
+      <h4 >¿Que ofrecemos?</h4>
       <ul>
         <li>
           <span class="material-icons-round text-green">
@@ -103,10 +88,31 @@
 
       </ul>
     </div>
-    <h1>Aula de Software Libre</h1>
+  </section>
+
+  <!-- Data -->
+  <div class="dataBackground"></div>
+  <section id="Data" class="Data thin-Section centered">
+  
+    <div class="col centered">
+      <h1 class="data">350+</h1>
+      <h2 class="label setoff-text ">Asistentes</h2>
+    </div>
+    <div class="col centered">
+      <h1 class="data">11</h1>
+      <h2 class="label setoff-text ">Charlas</h2>
+    </div>
+    <div class="col centered">
+      <h1 class="data">4</h1>
+      <h2 class="label setoff-text ">Mini-Tracks</h2>
+    </div>
+  </section>
+  
+  <section id="About-cont" class="About Section centered">
+    <h1 class="setoff-text ">Aula de Software Libre</h1>
     <div class="row centered">
       <div class="colS centered">
-        <img src="./images/footer/logo-aula-negro.png" alt="logo del aula de software libre" />    
+        <img src="./images/footer/logo-aula-blanco.png" alt="logo del aula de software libre" />    
       </div>
       <div class="colM centered">
         <p class="text-left">
@@ -118,10 +124,16 @@
     </div>
   </section>
   
-  <!-- Speakers -->
-  <section id="Speakers" class="Section">
-    <h1>Speakers</h1>
 
+
+
+  <!-- Speakers -->
+  <section id="Speakers" class="Section Speakers">
+    <h1>Speakers</h1>
+    <h2> To be announced... </h2>
+    <div class="grid">
+
+    </div>
   </section>
   <!-- Schedule -->
   <section id="Schedule" class="Section">
