feat: first look for speakers section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Salmorejo 2022</title>
 
   <!-- Imports -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="/styles/main.css">
   <script type="module" src="/scripts/main.js"></script>  
@@ -129,10 +130,37 @@
 
   <!-- Speakers -->
   <section id="Speakers" class="Section Speakers">
-    <h1>Speakers</h1>
-    <h2> To be announced... </h2>
+    <h1 class="setoff-text black">Speakers</h1>
+    <h2 class="setoff-text black"> To be announced... </h2>
     <div class="grid">
-
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/placeholder.jpg">
+        </div>
+        <div class="Label">
+          <h3>Jhon Doe</h3>
+          <p>Google FullStack Software Engineer</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="" class="fa fa-twitter"></a></li>
+              <li><a href="" class="fa fa-instagram"></a></li>
+              <li><a href="" class="fa fa-facebook"></a></li>
+              <li><a href="" class="fa fa-linkedin"></a></li>
+              <li><a href="" class="fa fa-github"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
+      <div class="speakerCard"></div>
     </div>
   </section>
   <!-- Schedule -->
