feat: Sponsors section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
     </div>
   </section>
 
-
-
   <!-- About -->
-  <section id="About" class="About Section centered">
+  <section id="About" class="About Section orange centered">
     <h1 class="setoff-text ">¿Que es el SalmorejoTech?</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum, lacus id mattis aliquam, ligula magna
@@ -108,8 +106,8 @@
       <h2 class="label setoff-text ">Mini-Tracks</h2>
     </div>
   </section>
-  
-  <section id="About-cont" class="About Section centered">
+  <!-- About-Cont -->
+  <section id="About-cont" class="About Section orange centered">
     <h1 class="setoff-text ">Aula de Software Libre</h1>
     <div class="row centered">
       <div class="colS centered">
@@ -125,11 +123,8 @@
     </div>
   </section>
   
-
-
-
   <!-- Speakers -->
-  <section id="Speakers" class="Section Speakers">
+  <section id="Speakers" class="Section Speakers white">
     <h1 class="setoff-text black">Speakers</h1>
     <h2 class="setoff-text black"> To be announced... </h2>
     <div class="grid">
@@ -164,28 +159,62 @@
     </div>
   </section>
   <!-- Schedule -->
-  <section id="Schedule" class="Section">
-    <h1>Schedule</h1>
+  <section id="Schedule" class="Section orange">
+    <h1 class="setoff-text" >Horario</h1>
+    <h4>Proximamente...</h4>
   </section>
   <!-- Sponsors -->
-  <section id="Sponsors" class="Section">
-    <h1>Sponsors</h1>
+  <section id="Sponsors" class="Section Sponsors white">
+    <h1 class="setoff-text black">Patrocinadores</h1>
+    <div class="grid">
+      <div class="sponsor">
+        <img src="./images/partners2021/atmira.svg" alt="Sponsor1"/>
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/audiense.svg" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/genially.svg" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/intelygenz.png" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/codely.png" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
+      </div>
+      <div class="sponsor">
+        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
+      </div>
+    </div>
   </section>
   <!-- Place -->
-  <section id="Place" class="Section">
-    <h1>Place</h1>
+  <section id="Place" class="Section orange">
+    <h1 class="setoff-text">Lugar</h1>
+    <h4>Proximamente...</h4>
   </section>
   <!-- PreviousEvents -->
-  <section id="PreviousEvents" class="Section">
-    <h1>PreviousEvents</h1>
+  <section id="PreviousEvents" class="Section white">
+    <h1 class="setoff-text black">Ediciones Anteriores</h1>
+    <h4>Proximamente...</h4>
   </section>
   <!-- Tickets -->
-  <section id="Tickets" class="Section">
-    <h1>Tickets</h1>
+  <section id="Tickets" class="Section orange">
+    <h1 class="setoff-text">Entradas</h1>
+    <h4>Proximamente...</h4>
   </section>
-
+  <!-- Team -->
+  <section id="Team" class="Section white">
+    <h1 class="setoff-text black">Equipo</h1>
+    <h4>Proximamente...</h4>
+  </section>
   <!-- Footer -->
-  <footer>
+  <footer class="Section orange">
 
   </footer>
 
