feat: first try for tickets section

--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
     <h4>Proximamente...</h4>
   </section>
   <!-- Tickets -->
-  <section id="Tickets" class="Section orange">
+  <section id="Tickets" class="Section Tickets orange">
     <h1 class="setoff-text">Entradas</h1>
     <h4>Proximamente...</h4>
+    <a href="http://eepurl.com/guAgTT" target="_blank" rel="noreferrer noopener" class="contactBtn">Mantenme al día</a>
   </section>
   <!-- Team -->
   <section id="Team" class="Section white">
