feat: some content added and tweaks on stylinh

--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
   <section id="About" class="About Section orange centered">
     <h1 class="setoff-text ">¿Que es el SalmorejoTech?</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum, lacus id mattis aliquam, ligula magna
-      sollicitudin dui, non vulputate elit mi ut ex. Pellentesque a eros non eros egestas feugiat. Maecenas laoreet cursus
-      laoreet. Praesent eu magna blandit, posuere ipsum a, tempus felis. Fusce iaculis velit in dui viverra.
+      El congreso tecnológico más grande de Córdoba. Un día repleto de charlas, software y networking donde compartir y hacer
+      comunidad con profesionales, estudiantes y empresarios de córdoba
     </p>
     <div class="about-List colM centered glass-card">
       <h4 >¿Que ofrecemos?</h4>
+      <p>
+        Otro año más vuelve el SalmorejoTech, donde Córdoba se convierte en la capital del software en España por un día. Como
+        todos los años, ponemos el foco en la calidad de nuestras <span>ponencias</span>, en hacer un congreso <span>inclusivo
+          y paritario</span>, en
+        el <span>Networking</span> y en Córdoba. Que mejor ocasión que en Mayo, en pleno festival de los <span>Patios de
+          Córdoba!!</span>
+      </p>
+    </br>
+
       <ul>
         <li>
           <span class="material-icons-round text-green">
@@ -94,16 +102,16 @@
   <section id="Data" class="Data thin-Section centered">
   
     <div class="col centered">
-      <h1 class="data">350+</h1>
+      <h1 class="data">400+</h1>
       <h2 class="label setoff-text ">Asistentes</h2>
     </div>
     <div class="col centered">
-      <h1 class="data">11</h1>
+      <h1 class="data">10+</h1>
       <h2 class="label setoff-text ">Charlas</h2>
     </div>
     <div class="col centered">
-      <h1 class="data">4</h1>
-      <h2 class="label setoff-text ">Mini-Tracks</h2>
+      <h1 class="data text">Café + Almuerzo + Networking</h1>
+      <h2 class="label setoff-text ">Incluidos</h2>
     </div>
   </section>
   <!-- About-Cont -->
