feat: some little  changes, footer done (but not responsive yet)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Imports -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/styles/main.css">
   <script type="module" src="/scripts/main.js"></script>  
@@ -33,7 +33,6 @@
           <li id="nav-Schedule"><a>Horario</a></li>
           <li id="nav-Sponsors"><a>Patrocinadores</a></li>
           <li id="nav-Place"><a>Lugar</a></li>
-          <li id="nav-PreviousEvents"><a>Previos Eventos</a></li>
           <li id="nav-Tickets"><a>Entradas</a></li>
         </ul>
       </section>
@@ -206,25 +205,40 @@
     <h1 class="setoff-text">Lugar</h1>
     <h4>Proximamente...</h4>
   </section>
-  <!-- PreviousEvents -->
-  <section id="PreviousEvents" class="Section white">
-    <h1 class="setoff-text black">Ediciones Anteriores</h1>
-    <h4>Proximamente...</h4>
-  </section>
   <!-- Tickets -->
-  <section id="Tickets" class="Section Tickets orange">
-    <h1 class="setoff-text">Entradas</h1>
+  <section id="Tickets" class="Section Tickets white">
+    <h1 class="setoff-text black">Entradas</h1>
     <h4>Proximamente...</h4>
     <a href="http://eepurl.com/guAgTT" target="_blank" rel="noreferrer noopener" class="contactBtn">Mantenme al día</a>
   </section>
-  <!-- Team -->
-  <section id="Team" class="Section white">
-    <h1 class="setoff-text black">Equipo</h1>
-    <h4>Proximamente...</h4>
-  </section>
   <!-- Footer -->
-  <footer class="Section orange">
-
+  <footer class="Section orange Footer">
+    <div class="main-row">
+      <div class="RRSS">
+        <a href="https://www.uco.es/aulasoftwarelibre/" target="_blank" rel="noopener noreferrer">
+          <img src="images/footer/logo-aula-blanco.png" alt="Aula Software Libre" />
+        </a>
+        <ul>
+          <li><a href="https://twitter.com/AulaSL" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a></li>
+          <li><a href="https://www.instagram.com/aulasoftwarelibre" target="_blank" rel="noopener noreferrer" class="fa fa-instagram"></a></li>
+          <li><a href="https://github.com/aulasoftwarelibre" target="_blank" rel="noopener noreferrer" class="fa fa-github"></a></li>
+          <li><a href="https://www.youtube.com/aulasoftwarelibre" target="_blank" rel="noopener noreferrer" class="fa fa-youtube"></a></li>
+          <li><a href="https://telegram.me/AulaSoftwareLibreUCO" target="_blank" rel="noopener noreferrer" class="fa fa-telegram"></a></li>
+          <li><a href="https://www.facebook.com/AulaSoftwareLibre" target="_blank" rel="noopener noreferrer" class="fa fa-facebook"></a></li>
+          <li><a href="https://www.uco.es/aulasoftwarelibre/" target="_blank" rel="noopener noreferrer" class="fa fa-globe"></a></li>
+        </ul>
+      </div>
+      <div class="contactInfo">
+        <h1>¡Encuentranos!</h1>
+        <h3><a href="mailto:aulasoftwarelibre@uco.es" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope"></i> aulasoftwarelibre@uco.es</a></h3>
+        <h3><a href="https://g.page/aulasoftwarelibre?share" target="_blank" rel="noopener noreferrer"><i class="fa fa-location-dot"></i> Aulario Averroes. Campus de Rabanales</a></h3>
+      </div>
+    </div>
+    <div class="second-row">
+      <h3>
+        <i class="fa fa-copyright flip"></i> Aula de Software Libre. Universidad de Cordoba.
+      </h3>
+    </div>
   </footer>
 
 </body>
