feat: Typing effect on hero

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="Hero-Text-Block">
       <img class="Hero-Isologo" src="./images/sprites/isologo-blanco.png"/>
       <h2>Tu evento tecnológico con sabor <span>cordobés</span></h2>
-      <h3>Más Cordobes / Tecnologico / Salmorejo...</h3>
+      <h2>Más <span id="typingText" class="typing"></span></h2>
       <h3>13 DE <span>MAYO</span> DE 2022</h3>
     </div>
     <div class="Hero-bottom">
