feat: about list content added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         Otro año más vuelve el SalmorejoTech, donde Córdoba se convierte en la capital del software en España por un día. Como
         todos los años, ponemos el foco en la calidad de nuestras <span>ponencias</span>, en hacer un congreso <span>inclusivo
           y paritario</span>, en
-        el <span>Networking</span> y en Córdoba. Que mejor ocasión que en Mayo, en pleno festival de los <span>Patios de
+        el <span>Networking</span> y en Córdoba. Qué mejor ocasión que en Mayo, en pleno festival de los <span>Patios de
           Córdoba!!</span>
       </p>
     </br>
@@ -77,19 +77,25 @@
           <span class="material-icons-round text-green">
             check
           </span>
-          Lorem ipsum dolor sit amet
+          Ponentes profesionales de calidad del sector.
         </li>
         <li>
           <span class="material-icons-round text-green">
             check
           </span>
-          Lorem ipsum dolor sit amet
+          Establecer lazos entre la comunidad informatica.
         </li>
         <li>
           <span class="material-icons-round text-green">
             check
           </span>
-          Lorem ipsum dolor sit amet
+          Conocer a distintas empresas afines al sector.
+        </li>
+        <li>
+          <span class="material-icons-round text-green">
+            check
+          </span>
+          Poder compartir en un clima de confianza las experiencias personales sobre la tecnologia.
         </li>
 
       </ul>
