feat: detailing css & responsiveness

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       comunidad con profesionales, estudiantes y empresarios de córdoba
     </p>
     <div class="about-List colM centered glass-card">
-      <h4 >¿Que ofrecemos?</h4>
+      <h2>¿Que ofrecemos?</h2>
       <p>
         Otro año más vuelve el SalmorejoTech, donde Córdoba se convierte en la capital del software en España por un día. Como
         todos los años, ponemos el foco en la calidad de nuestras <span>ponencias</span>, en hacer un congreso <span>inclusivo
@@ -115,7 +115,7 @@
       <h2 class="label setoff-text ">Charlas</h2>
     </div>
     <div class="col centered">
-      <h1 class="data text">Café + Almuerzo + Networking</h1>
+      <h1 class="data text">Comida + Networking</h1>
       <h2 class="label setoff-text ">Incluidos</h2>
     </div>
   </section>
@@ -127,7 +127,7 @@
         <img src="./images/footer/logo-aula-blanco.png" alt="logo del aula de software libre" />    
       </div>
       <div class="colM centered">
-        <p class="text-left">
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum, lacus id mattis aliquam, ligula magna
           sollicitudin dui, non vulputate elit mi ut ex. Pellentesque a eros non eros egestas feugiat. Maecenas laoreet cursus
           laoreet. Praesent eu magna blandit, posuere ipsum a, tempus felis. Fusce iaculis velit in dui viverra.
@@ -161,14 +161,6 @@
       </div>
       <div class="speakerCard"></div>
       <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
-      <div class="speakerCard"></div>
     </div>
   </section>
   <!-- Schedule -->
@@ -179,30 +171,19 @@
   <!-- Sponsors -->
   <section id="Sponsors" class="Section Sponsors white">
     <h1 class="setoff-text black">Patrocinadores</h1>
+    <h4>Proximamente...</h4>
     <div class="grid">
       <div class="sponsor">
-        <img src="./images/partners2021/atmira.svg" alt="Sponsor1"/>
+        <img src="./images/sprites/isologo.svg" alt="Sponsor1"/>
       </div>
       <div class="sponsor">
-        <img src="./images/partners2021/audiense.svg" alt="Sponsor1" />
+        <img src="./images/sprites/isologo.svg" alt="Sponsor2" />
       </div>
       <div class="sponsor">
-        <img src="./images/partners2021/genially.svg" alt="Sponsor1" />
+        <img src="./images/sprites/isologo.svg" alt="Sponsor3" />
       </div>
       <div class="sponsor">
-        <img src="./images/partners2021/intelygenz.png" alt="Sponsor1" />
-      </div>
-      <div class="sponsor">
-        <img src="./images/partners2021/codely.png" alt="Sponsor1" />
-      </div>
-      <div class="sponsor">
-        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
-      </div>
-      <div class="sponsor">
-        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
-      </div>
-      <div class="sponsor">
-        <img src="./images/partners2021/atmira.svg" alt="Sponsor1" />
+        <img src="./images/sprites/isologo.svg" alt="Sponsor4" />
       </div>
     </div>
   </section>
@@ -237,7 +218,7 @@
       <div class="contactInfo">
         <h1>¡Encuentranos!</h1>
         <h3><a href="mailto:aulasoftwarelibre@uco.es" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope"></i> aulasoftwarelibre@uco.es</a></h3>
-        <h3><a href="https://g.page/aulasoftwarelibre?share" target="_blank" rel="noopener noreferrer"><i class="fa fa-location-dot"></i> Aulario Averroes. Campus de Rabanales</a></h3>
+        <h3><a href="https://g.page/aulasoftwarelibre?share" target="_blank" rel="noopener noreferrer"><i class="fa fa-location-dot"></i> Aulario Averroes.<br/>Campus de Rabanales</a></h3>
       </div>
     </div>
     <div class="second-row">
