--- a/index.html
+++ b/index.html
@@ -4,6 +4,53 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+  
+  <!-- Meta info - General -->
+  <meta name="description" content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
+  <meta name="keywords"
+    content="evento, ASL, salmorejo, salmorejotech, salmorejotech2021, congreso, mesa redonda, conferencia, libre, software libre" />
+  <link rel="canonical" href="https://salmorejo.tech" />
+  
+  <!-- Social - Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@AulaSL" />
+  <meta name="twitter:title" content="SalmorejoTech 2022" />
+  <meta name="twitter:description"
+    content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
+  <meta name="twitter:image:src" content="https://salmorejo.tech/2022/seo/salmorejo_fondo.jpg" />
+  
+  <!-- Social: Facebook / Open Graph -->
+  <meta name="og:type" content="website" />
+  <meta name="og:site_name" content="SalmorejoTech 2022" />
+  <meta name="og:title" content="SalmorejoTech 2022" />
+  <meta name="og:description"
+    content="SalmorejoTech es un evento tecnológico para todos aquellos dispuestos a aprender" />
+  <meta name="og:image" content="https://salmorejo.tech/2022/seo/salmorejo_fondo.jpg" />
+  <meta name="og:url" content="https://salmorejo.tech" />
+  
+  <!-- Icons / Favicon --> 
+  <link rel="shortcut icon" href="/images/favicons/favicon.ico" />
+  
+  <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" />
+  <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" href="/images/favicons/favicon-96x96.png" />
+  <link rel="icon" type="image/png" href="/images/favicons/favicon-150x150.png" />
+  <link rel="icon" type="image/png" href="/images/favicons/favicon-310x310.png" />
+  
+  <link rel="apple-icon" sizes="57x57" href="/images/favicons/apple-icon-57x57.png" />
+  <link rel="apple-icon" sizes="60x60" href="/images/favicons/apple-icon-60x60.png" />
+  <link rel="apple-icon" sizes="72x72" href="/images/favicons/apple-icon-72x72.png" />
+  <link rel="apple-icon" sizes="76x76" href="/images/favicons/apple-icon-76x76.png" />
+  <link rel="apple-icon" sizes="114x114" href="/images/favicons/apple-icon-114x114.png" />
+  <link rel="apple-icon" sizes="120x120" href="/images/favicons/apple-icon-120x120.png" />
+  <link rel="apple-icon" sizes="144x144" href="/images/favicons/apple-icon-144x144.png" />
+  <link rel="apple-icon" sizes="152x152" href="/images/favicons/apple-icon-152x152.png" />
+  
+  <meta name="msapplication-TitleColor" content="#ffbd33" />
+  <meta name="msapplication-TitleImage" content="/images/favicons/mstile-144x144.png" />
+  <meta name="msapplication-config" content="/images/favicons/browserconfig.xml" />
+  <meta name="theme-color" content="#ffbd33" />
+  
   <title>Salmorejo 2022</title>
 
   <!-- Imports -->
@@ -128,9 +175,8 @@
       </div>
       <div class="colM centered">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum, lacus id mattis aliquam, ligula magna
-          sollicitudin dui, non vulputate elit mi ut ex. Pellentesque a eros non eros egestas feugiat. Maecenas laoreet cursus
-          laoreet. Praesent eu magna blandit, posuere ipsum a, tempus felis. Fusce iaculis velit in dui viverra.
+          Desde el Aula de Software Libre, organizamos numerosos eventos a lo largo de todo el año. Nuestro principal objetivo es
+          enseñar y acercar a personas de todo tipo la importancia del software libre. ¡Te esperamos!
         </p>
       </div>
     </div>
