--- a/index.html
+++ b/index.html
@@ -184,16 +184,15 @@
   
   <!-- Speakers -->
   <section id="Speakers" class="Section Speakers white">
-    <h1 class="setoff-text black">Speakers</h1>
-    <h2 class="setoff-text black"> To be announced... </h2>
+    <h1 class="setoff-text black">Ponentes</h1>
     <div class="grid">
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/placeholder.jpg">
+          <img src="images/speakers/placeholder.png">
         </div>
         <div class="Label">
           <h3>Jhon Doe</h3>
-          <p>Google FullStack Software Engineer</p>
+          <p>Salmorejo FullStack Developer</p>
           <div class="RRSS">
             <ul>
               <li><a href="" class="fa fa-twitter"></a></li>
@@ -205,7 +204,24 @@
           </div>
         </div>
       </div>
-      <div class="speakerCard"></div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/placeholder-chica.png">
+        </div>
+        <div class="Label">
+          <h3>Jane Doe</h3>
+          <p>Salmorejo CyberSecurity Engineer</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="" class="fa fa-twitter"></a></li>
+              <li><a href="" class="fa fa-instagram"></a></li>
+              <li><a href="" class="fa fa-facebook"></a></li>
+              <li><a href="" class="fa fa-linkedin"></a></li>
+              <li><a href="" class="fa fa-github"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <div class="speakerCard"></div>
     </div>
   </section>
@@ -234,15 +250,36 @@
     </div>
   </section>
   <!-- Place -->
-  <section id="Place" class="Section orange">
+  <section id="Place" class="Section orange Place">
     <h1 class="setoff-text">Lugar</h1>
-    <h4>Proximamente...</h4>
+    <div class="gallery">
+      <div class="sub-section">
+        <h2>SALÓN DE ACTOS RECTORADO</h2>
+        <div class="bigPhoto conference"></div>
+      </div>
+      <div class="sub-section">
+        <div class="photo checkIn"></div>
+        <h2>NETWORKING DE CALIDAD</h2>
+        <div class="photo networking"></div>
+      </div>
+    </div>
+    <div class="direction">
+      <h2>Dirección</h2>
+      <h3>AV. DE MEDINA AZAHARA, 5</h3>
+      <h3>CÓRDOBA 14005, ESPAÑA</h3>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4083.746837936473!2d-4.784313584698631!3d37.883699277360684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6cdf60e271dc79%3A0xde994cae3981bc29!2sUniversity%20of%20Cordoba!5e0!3m2!1sen!2ses!4v1648419407963!5m2!1sen!2ses"
+        allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </section>
   <!-- Tickets -->
   <section id="Tickets" class="Section Tickets white">
     <h1 class="setoff-text black">Entradas</h1>
     <h4>Proximamente...</h4>
-    <a href="http://eepurl.com/guAgTT" target="_blank" rel="noreferrer noopener" class="contactBtn">Mantenme al día</a>
+    <div class="row centered">
+      <a href="http://eepurl.com/guAgTT" target="_blank" rel="noreferrer noopener" class="contactBtn">Mantenme al día</a>
+    </div>
   </section>
   <!-- Footer -->
   <footer class="Section orange Footer">
