feat: unified all css/js files and added loading screen

--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/main_v005.css">
   <script type="module" src="/scripts/main.js"></script>  
 
 </head>
 <body>
+
+  <!-- Loading screen-->
+  <div id="Loading">
+    <img src="./images/sprites/loader.png" id="tomato" alt="tomato" class="tomato animated">
+  </div>
   <!-- Navbar -->
   <ul class="Navbar-zone">
     <li id="Navbar-toggle-btn" class="Navbar-toggle-btn">
