fix: little grammar fixes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main_v005.css">
+  <link rel="stylesheet" href="/styles/main_v006.css">
   <script type="module" src="/scripts/main.js"></script>  
 
 </head>
@@ -108,13 +108,13 @@
 
   <!-- About -->
   <section id="About" class="About Section orange centered">
-    <h1 class="setoff-text ">¿Que es el SalmorejoTech?</h1>
+    <h1 class="">¿Qué es el SalmorejoTech?</h1>
     <p>
       El congreso tecnológico más grande de Córdoba. Un día repleto de charlas, software y networking donde compartir y hacer
       comunidad con profesionales, estudiantes y empresarios de córdoba
     </p>
     <div class="about-List colM centered glass-card">
-      <h2>¿Que ofrecemos?</h2>
+      <h2>¿Qué ofrecemos?</h2>
       <p>
         Otro año más vuelve el SalmorejoTech, donde Córdoba se convierte en la capital del software en España por un día. Como
         todos los años, ponemos el foco en la calidad de nuestras <span>ponencias</span>, en hacer un congreso <span>inclusivo
@@ -160,20 +160,20 @@
   
     <div class="col centered">
       <h1 class="data">400+</h1>
-      <h2 class="label setoff-text ">Asistentes</h2>
+      <h2 class="label">Asistentes</h2>
     </div>
     <div class="col centered">
       <h1 class="data">10+</h1>
-      <h2 class="label setoff-text ">Charlas</h2>
+      <h2 class="label">Charlas</h2>
     </div>
     <div class="col centered">
       <h1 class="data text">Comida + Networking</h1>
-      <h2 class="label setoff-text ">Incluidos</h2>
+      <h2 class="label">Incluidos</h2>
     </div>
   </section>
   <!-- About-Cont -->
   <section id="About-cont" class="About Section orange centered">
-    <h1 class="setoff-text ">Aula de Software Libre</h1>
+    <h1 class="">Aula de Software Libre</h1>
     <div class="row centered">
       <div class="colS centered">
         <img src="./images/footer/logo-aula-blanco.png" alt="logo del aula de software libre" />    
@@ -189,7 +189,7 @@
   
   <!-- Speakers -->
   <section id="Speakers" class="Section Speakers white">
-    <h1 class="setoff-text black">Ponentes</h1>
+    <h1 class="black">Ponentes</h1>
     <div class="grid">
       <div class="speakerCard">
         <div class="Photo">
@@ -232,13 +232,13 @@
   </section>
   <!-- Schedule -->
   <section id="Schedule" class="Section orange">
-    <h1 class="setoff-text" >Horario</h1>
-    <h4>Proximamente...</h4>
+    <h1 class="" >Horario</h1>
+    <h4>Próximamente...</h4>
   </section>
   <!-- Sponsors -->
   <section id="Sponsors" class="Section Sponsors white">
-    <h1 class="setoff-text black">Patrocinadores</h1>
-    <h4>Proximamente...</h4>
+    <h1 class="black">Patrocinadores</h1>
+    <h4>Próximamente...</h4>
     <div class="grid">
       <div class="sponsor">
         <img src="./images/sprites/isologo.svg" alt="Sponsor1"/>
@@ -256,7 +256,7 @@
   </section>
   <!-- Place -->
   <section id="Place" class="Section orange Place">
-    <h1 class="setoff-text">Lugar</h1>
+    <h1 class="">Lugar</h1>
     <div class="gallery">
       <div class="sub-section">
         <h2>SALÓN DE ACTOS RECTORADO</h2>
@@ -280,8 +280,8 @@
   </section>
   <!-- Tickets -->
   <section id="Tickets" class="Section Tickets white">
-    <h1 class="setoff-text black">Entradas</h1>
-    <h4>Proximamente...</h4>
+    <h1 class="black">Entradas</h1>
+    <h4>Próximamente...</h4>
     <div class="row centered">
       <a href="http://eepurl.com/guAgTT" target="_blank" rel="noreferrer noopener" class="contactBtn">Mantenme al día</a>
     </div>
