--- a/index.html
+++ b/index.html
@@ -193,18 +193,15 @@
     <div class="grid">
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/placeholder.png">
+          <img src="images/speakers/eduSatoe.jpg">
         </div>
         <div class="Label">
-          <h3>Jhon Doe</h3>
-          <p>Salmorejo FullStack Developer</p>
+          <h3>Eduardo Sanchez</h3>
+          <p>CEO AllPentesting</p>
           <div class="RRSS">
             <ul>
-              <li><a href="" class="fa fa-twitter"></a></li>
-              <li><a href="" class="fa fa-instagram"></a></li>
-              <li><a href="" class="fa fa-facebook"></a></li>
-              <li><a href="" class="fa fa-linkedin"></a></li>
-              <li><a href="" class="fa fa-github"></a></li>
+              <li><a href="https://twitter.com/eduSatoe" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/eduardosancheztoril/" target="_blank" rel="noopener noreferrer" class="fa fa-linkedin"></a></li>
             </ul>
           </div>
         </div>
@@ -215,7 +212,7 @@
         </div>
         <div class="Label">
           <h3>Jane Doe</h3>
-          <p>Salmorejo CyberSecurity Engineer</p>
+          <p>Salmorejo FullStack Developer</p>
           <div class="RRSS">
             <ul>
               <li><a href="" class="fa fa-twitter"></a></li>
