--- a/index.html
+++ b/index.html
@@ -235,10 +235,11 @@
   <!-- Sponsors -->
   <section id="Sponsors" class="Section Sponsors white">
     <h1 class="black">Patrocinadores</h1>
-    <h4>Próximamente...</h4>
     <div class="grid">
       <div class="sponsor">
-        <img src="./images/sprites/isologo.svg" alt="Sponsor1"/>
+        <a href="https://es.audiense.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/audiense.svg" alt="audiense"/>
+        </a>
       </div>
       <div class="sponsor">
         <img src="./images/sprites/isologo.svg" alt="Sponsor2" />
