feat: minified cs

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main_v006.css">
+  <link rel="stylesheet" href="/styles/main_v006.min.css">
   <script type="module" src="/scripts/main.js"></script>  
 
 </head>
