feat: added Paula Garcia to speakers section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
   <script src="https://kit.fontawesome.com/00d5b47be3.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/styles/main_v006.min.css">
+  <link rel="stylesheet" href="/styles/main_v007.min.css">
   <script type="module" src="/scripts/main.js"></script>  
 
 </head>
@@ -208,10 +208,25 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/placeholder-chica.png">
+          <img src="images/speakers/paulaGarcia.jpg">
         </div>
         <div class="Label">
-          <h3>Jane Doe</h3>
+          <h3>Paula García</h3>
+          <p>Doctorado en Computación Cuántica</p>
+          <div class="RRSS">
+            <ul>
+              <li><a href="https://twitter.com/paula_g_phys" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="speakerCard">
+        <div class="Photo">
+          <img src="images/speakers/placeholder.png">
+        </div>
+        <div class="Label">
+          <h3>John Doe</h3>
           <p>Salmorejo FullStack Developer</p>
           <div class="RRSS">
             <ul>
@@ -224,7 +239,6 @@
           </div>
         </div>
       </div>
-      <div class="speakerCard"></div>
     </div>
   </section>
   <!-- Schedule -->
