fix: updated card for paula garcia

--- a/index.html
+++ b/index.html
@@ -212,11 +212,12 @@
         </div>
         <div class="Label">
           <h3>Paula García</h3>
-          <p>Doctorado en Computación Cuántica</p>
+          <p>Investigadora Predoctoral en Computación Cuántica</p>
           <div class="RRSS">
             <ul>
-              <li><a href="https://twitter.com/paula_g_phys" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a>
-              </li>
+              <li><a href="https://twitter.com/paula_g_phys" target="_blank" rel="noopener noreferrer" class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/paula-garc%C3%ADa-molina-538b86199/" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-linkedin"></a></li>
             </ul>
           </div>
         </div>
