--- a/index.html
+++ b/index.html
@@ -224,18 +224,17 @@
       </div>
       <div class="speakerCard">
         <div class="Photo">
-          <img src="images/speakers/placeholder.png">
+          <img src="images/speakers/inesHuertas.jpg">
         </div>
         <div class="Label">
-          <h3>John Doe</h3>
-          <p>Salmorejo FullStack Developer</p>
+          <h3>Inés Huertas</h3>
+          <p>Head of Data & AI en Kairós DS</p>
           <div class="RRSS">
             <ul>
-              <li><a href="" class="fa fa-twitter"></a></li>
-              <li><a href="" class="fa fa-instagram"></a></li>
-              <li><a href="" class="fa fa-facebook"></a></li>
-              <li><a href="" class="fa fa-linkedin"></a></li>
-              <li><a href="" class="fa fa-github"></a></li>
+              <li><a href="https://twitter.com/quierodata" target="_blank" rel="noopener noreferrer"
+                  class="fa fa-twitter"></a></li>
+              <li><a href="https://www.linkedin.com/in/ineshuertas/" target="_blank"
+                  rel="noopener noreferrer" class="fa fa-linkedin"></a></li>
             </ul>
           </div>
         </div>
@@ -257,7 +256,9 @@
         </a>
       </div>
       <div class="sponsor">
-        <img src="./images/sprites/isologo.svg" alt="Sponsor2" />
+        <a href="https://www.kairosds.com/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/kairos.png" alt="kairosds" />
+        </a>
       </div>
       <div class="sponsor">
         <img src="./images/sprites/isologo.svg" alt="Sponsor3" />
