feat: added clarity to sponsors list

--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@
         </a>
       </div>
       <div class="sponsor">
-        <img src="./images/sprites/isologo.svg" alt="Sponsor3" />
+        <a href="https://clarity.ai/" target="_blank" rel="noreferrer noopener">
+          <img src="./images/sponsors/clarity-logo-ai.svg" alt="clarity.ai" />
+        </a>
       </div>
       <div class="sponsor">
         <img src="./images/sprites/isologo.svg" alt="Sponsor4" />
